[gd_scene load_steps=49 format=3 uid="uid://bpptglsktg2cy"]

[ext_resource type="Script" path="res://Scripts/hammerball.gd" id="1_8tu0w"]
[ext_resource type="PackedScene" uid="uid://jvr74kpe6ekr" path="res://Scenes/ball.tscn" id="2_r2lg3"]
[ext_resource type="Script" path="res://Scripts/player_left.gd" id="3_dipui"]
[ext_resource type="Texture2D" uid="uid://sxg717mjggqf" path="res://Art/ball shadow.png" id="3_xpp1u"]
[ext_resource type="Script" path="res://Scripts/shadow_position.gd" id="4_j684j"]
[ext_resource type="Texture2D" uid="uid://cbmt75tcfd8ds" path="res://Art/puppiz.png" id="5_7xbuw"]
[ext_resource type="Script" path="res://Scripts/player_right.gd" id="5_73osy"]
[ext_resource type="Texture2D" uid="uid://ui8pw5h5clgg" path="res://icon.svg" id="6_pv57n"]
[ext_resource type="FontFile" uid="uid://b2kpvm32qks3t" path="res://Art/CursedTimerUlil-Aznm.ttf" id="6_y6m3s"]
[ext_resource type="Texture2D" uid="uid://bckr28tcijg81" path="res://Art/foot.png" id="7_dfu3f"]
[ext_resource type="Texture2D" uid="uid://bf8baitlb0ata" path="res://Art/medal.png" id="8_ap54t"]
[ext_resource type="Texture2D" uid="uid://dtq6ntbf35a5s" path="res://Art/bone.png" id="8_mnuda"]
[ext_resource type="PackedScene" uid="uid://cm2rlnv5eh2kh" path="res://Scenes/puppies.tscn" id="9_03pgd"]
[ext_resource type="Texture2D" uid="uid://ufuxb33or17d" path="res://Art/front goal poles.png" id="9_uw05k"]
[ext_resource type="AudioStream" uid="uid://da6jc8yqgdj2r" path="res://Art/sounds/kick1.wav" id="11_qls3b"]
[ext_resource type="AudioStream" uid="uid://bsw88dipt0wll" path="res://Art/sounds/whiste_end.wav" id="12_bskrm"]
[ext_resource type="AudioStream" uid="uid://cu4rxknqk67l8" path="res://Art/sounds/goal.wav" id="13_qglyp"]
[ext_resource type="AudioStream" uid="uid://cko4gw80idlwa" path="res://Art/sounds/powerup.wav" id="16_ht6w6"]
[ext_resource type="AudioStream" uid="uid://bud2oekcpd54j" path="res://Art/sounds/cheer.wav" id="17_erf78"]
[ext_resource type="AudioStream" uid="uid://wcejsxuclijg" path="res://Art/sounds/short_cheer.wav" id="18_sgmiw"]
[ext_resource type="AudioStream" uid="uid://o0cnlososmp8" path="res://Art/sounds/aimbience.wav" id="20_o6hgm"]
[ext_resource type="Shader" path="res://Scenes/hammerball.gdshader" id="21_3l3xu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ligc5"]
friction = 0.0
bounce = 0.18
absorbent = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8pb5e"]
radius = 27.0
height = 88.0

[sub_resource type="AtlasTexture" id="AtlasTexture_15s0g"]
atlas = ExtResource("5_7xbuw")
region = Rect2(0, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdtft"]
atlas = ExtResource("5_7xbuw")
region = Rect2(320, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_askua"]
atlas = ExtResource("5_7xbuw")
region = Rect2(640, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ex0"]
atlas = ExtResource("5_7xbuw")
region = Rect2(960, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6kj2"]
atlas = ExtResource("5_7xbuw")
region = Rect2(1280, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6j1q"]
atlas = ExtResource("5_7xbuw")
region = Rect2(1600, 0, 320, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_lh1tn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15s0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdtft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_askua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ex0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6kj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6j1q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_u1hmb"]
bounce = 0.35
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0hrn"]
size = Vector2(44, 70)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0n8tx"]
radius = 27.0
height = 88.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_daboa"]
bounce = 0.35
absorbent = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5el6f"]
friction = 0.5
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghsd5"]
size = Vector2(18, 786)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7jjfh"]
friction = 0.5
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbq0k"]
size = Vector2(1362, 20)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4ar1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qeepl"]
size = Vector2(36.5, 264)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hiaq1"]
size = Vector2(72, 20)

[sub_resource type="GDScript" id="GDScript_ybw0j"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csqgw"]
size = Vector2(30, 31)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dt0fg"]
shader = ExtResource("21_3l3xu")
shader_parameter/circle_size = 1.0

[sub_resource type="Animation" id="Animation_osyrk"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_vdekn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ocf3k"]
_data = {
"RESET": SubResource("Animation_vdekn"),
"close": SubResource("Animation_osyrk")
}

[node name="Hammerball" type="Node2D"]
script = ExtResource("1_8tu0w")

[node name="BallShadow" type="Sprite2D" parent="."]
position = Vector2(672, 654)
texture = ExtResource("3_xpp1u")
script = ExtResource("4_j684j")

[node name="Ball" parent="." groups=["Balls"] instance=ExtResource("2_r2lg3")]
z_index = 1
position = Vector2(672, 297)
contact_monitor = true
max_contacts_reported = 4
linear_damp = 0.2

[node name="PlayerLeft" type="RigidBody2D" parent="." groups=["PlayerLeft"]]
position = Vector2(264, 641)
collision_layer = 4
collision_mask = 5
mass = 1.92
physics_material_override = SubResource("PhysicsMaterial_ligc5")
lock_rotation = true
continuous_cd = 2
script = ExtResource("3_dipui")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLeft"]
position = Vector2(0, -30)
shape = SubResource("CapsuleShape2D_8pb5e")

[node name="GroundRay" type="RayCast2D" parent="PlayerLeft"]
target_position = Vector2(0, 35)
collision_mask = 5

[node name="LeftRay" type="RayCast2D" parent="PlayerLeft"]
target_position = Vector2(-40, 0)

[node name="RightRay" type="RayCast2D" parent="PlayerLeft"]
target_position = Vector2(40, 0)

[node name="Shoe2" type="Sprite2D" parent="PlayerLeft"]
z_index = 1
position = Vector2(16, 24)
scale = Vector2(0.237382, 0.258993)
region_enabled = true
region_rect = Rect2(262, 442, 117, 80)

[node name="Shoe" type="Sprite2D" parent="PlayerLeft"]
z_index = 1
position = Vector2(-11, 24)
scale = Vector2(0.237382, 0.258993)
region_enabled = true
region_rect = Rect2(262, 442, 117, 80)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerLeft"]
z_index = 1
position = Vector2(-6, -35)
scale = Vector2(0.34, 0.34)
sprite_frames = SubResource("SpriteFrames_lh1tn")
frame_progress = 0.925009

[node name="Bone" type="Sprite2D" parent="PlayerLeft"]
position = Vector2(29, -3)
rotation = -0.436332
texture = ExtResource("8_mnuda")

[node name="Bat" type="AnimatableBody2D" parent="PlayerLeft" groups=["PlayerLeft"]]
position = Vector2(27, -22)
collision_layer = 8
collision_mask = 8
physics_material_override = SubResource("PhysicsMaterial_u1hmb")
sync_to_physics = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLeft/Bat"]
position = Vector2(-14, 25)
shape = SubResource("RectangleShape2D_x0hrn")

[node name="MedalLeft" type="Sprite2D" parent="PlayerLeft"]
visible = false
z_index = 3
position = Vector2(-54, -27)
scale = Vector2(0.456705, 0.456705)
texture = ExtResource("8_ap54t")

[node name="PlayerRight" type="RigidBody2D" parent="." groups=["PlayerRight"]]
position = Vector2(1119, 634)
collision_layer = 4
collision_mask = 5
mass = 1.92
physics_material_override = SubResource("PhysicsMaterial_ligc5")
lock_rotation = true
continuous_cd = 2
script = ExtResource("5_73osy")
metadata/_edit_group_ = true

[node name="MedalRight" type="Sprite2D" parent="PlayerRight"]
visible = false
z_index = 3
position = Vector2(43.9999, -22)
scale = Vector2(0.456705, 0.456705)
texture = ExtResource("8_ap54t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRight"]
position = Vector2(0, -30)
shape = SubResource("CapsuleShape2D_0n8tx")

[node name="GroundRay" type="RayCast2D" parent="PlayerRight"]
target_position = Vector2(0, 35)
collision_mask = 5

[node name="LeftRay" type="RayCast2D" parent="PlayerRight"]
target_position = Vector2(-40, 0)

[node name="RightRay" type="RayCast2D" parent="PlayerRight"]
target_position = Vector2(40, 0)

[node name="Shoe2" type="Sprite2D" parent="PlayerRight"]
z_index = 1
position = Vector2(-6, 30)
scale = Vector2(0.181624, 0.225)
flip_h = true
region_enabled = true
region_rect = Rect2(34, 443, 117, 80)

[node name="Shoe" type="Sprite2D" parent="PlayerRight"]
z_index = 2
position = Vector2(15, 30)
scale = Vector2(0.181624, 0.225)
flip_h = true
region_enabled = true
region_rect = Rect2(34, 443, 117, 80)

[node name="AnimatedSprite2D" parent="PlayerRight" instance=ExtResource("9_03pgd")]

[node name="Bone" type="Sprite2D" parent="PlayerRight"]
position = Vector2(-30, -3)
rotation = -1.0472
texture = ExtResource("8_mnuda")

[node name="Bat" type="AnimatableBody2D" parent="PlayerRight" groups=["PlayerRight"]]
position = Vector2(-27, -22)
collision_layer = 8
collision_mask = 8
physics_material_override = SubResource("PhysicsMaterial_daboa")
sync_to_physics = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRight/Bat"]
position = Vector2(14, 25)
shape = SubResource("RectangleShape2D_x0hrn")

[node name="Bounds" type="Node2D" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Bounds"]
position = Vector2(-11, 0)
physics_material_override = SubResource("PhysicsMaterial_5el6f")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/WallLeft"]
position = Vector2(-1, 383)
shape = SubResource("RectangleShape2D_ghsd5")

[node name="WallRight" type="StaticBody2D" parent="Bounds"]
position = Vector2(1380, 64)
physics_material_override = SubResource("PhysicsMaterial_7jjfh")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/WallRight"]
position = Vector2(0, 319)
shape = SubResource("RectangleShape2D_ghsd5")

[node name="Ceiling" type="StaticBody2D" parent="Bounds"]
position = Vector2(0, 3)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Ceiling"]
position = Vector2(671, 0)
shape = SubResource("RectangleShape2D_rbq0k")

[node name="up up" type="CollisionPolygon2D" parent="Bounds/Ceiling"]
position = Vector2(1171, 11)
polygon = PackedVector2Array(0, 0, 40, 10, 80, 30, 150, 80, 200, 140, 200, 0)

[node name="up up2" type="CollisionPolygon2D" parent="Bounds/Ceiling"]
position = Vector2(195, 9)
polygon = PackedVector2Array(20, 0, -40, 15, -80, 30, -150, 80, -200, 140, -200, 0)

[node name="Floor" type="StaticBody2D" parent="Bounds"]
position = Vector2(600, 690)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Floor"]
shape = SubResource("WorldBoundaryShape2D_4ar1h")

[node name="GameTimer" type="Label" parent="."]
modulate = Color(1, 0.211765, 0.0745098, 1)
offset_left = 627.0
offset_top = 175.0
offset_right = 787.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("6_y6m3s")
theme_override_font_sizes/font_size = 36
text = "00:00"

[node name="Scoreboard" type="Label" parent="."]
modulate = Color(0.92549, 0.133333, 0.0470588, 1)
offset_top = 53.0
offset_right = 1368.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("6_y6m3s")
theme_override_font_sizes/font_size = 90
text = "0 - 0"
horizontal_alignment = 1

[node name="GoalLeft" type="Node2D" parent="."]
position = Vector2(0, -25)

[node name="GoalArea" type="Area2D" parent="GoalLeft"]
position = Vector2(36, 572)
collision_mask = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft/GoalArea"]
position = Vector2(-9.25, 46)
shape = SubResource("RectangleShape2D_qeepl")

[node name="Bar" type="StaticBody2D" parent="GoalLeft"]
position = Vector2(48, 544)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft/Bar"]
position = Vector2(-3.93606, -82.1936)
rotation = -0.0523599
shape = SubResource("RectangleShape2D_hiaq1")

[node name="Sprite2D" type="Sprite2D" parent="GoalLeft/Bar"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(-2.42277, -83.1657)
rotation = 1.52367
scale = Vector2(0.173423, 0.579618)
texture = ExtResource("6_pv57n")

[node name="GoalRight" type="Node2D" parent="."]
position = Vector2(1352, -105)
scale = Vector2(-1, 1)
metadata/_edit_group_ = true

[node name="GoalArea" type="Area2D" parent="GoalRight"]
position = Vector2(29, 653)
collision_mask = 3
script = SubResource("GDScript_ybw0j")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight/GoalArea"]
position = Vector2(-7, 49)
shape = SubResource("RectangleShape2D_qeepl")

[node name="Bar" type="StaticBody2D" parent="GoalRight"]
position = Vector2(48, 544)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight/Bar"]
position = Vector2(-4, 0)
rotation = -0.0523599
shape = SubResource("RectangleShape2D_hiaq1")

[node name="Sprite2D" type="Sprite2D" parent="GoalRight/Bar"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(-2.48671, -0.972131)
rotation = 1.52367
scale = Vector2(0.173423, 0.579618)
texture = ExtResource("6_pv57n")

[node name="Foot" type="Sprite2D" parent="."]
z_index = -7
position = Vector2(680, 389)
scale = Vector2(0.717593, 0.717593)
texture = ExtResource("7_dfu3f")

[node name="Goal2SecondTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="FrontGoalPoles" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(680, 389)
scale = Vector2(0.718, 0.718)
texture = ExtResource("9_uw05k")

[node name="Sounds" type="Node2D" parent="."]

[node name="goal_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("13_qglyp")
volume_db = 5.0

[node name="kick_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("11_qls3b")
volume_db = -5.0

[node name="whistle_end" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("12_bskrm")
volume_db = 10.0

[node name="powerup_collected" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("16_ht6w6")

[node name="cheer_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("17_erf78")

[node name="short_cheer_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("18_sgmiw")

[node name="ambience" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("20_o6hgm")
autoplay = true

[node name="OverGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverGoal"]
position = Vector2(1352, 434)
shape = SubResource("RectangleShape2D_csqgw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OverGoal"]
position = Vector2(15, 438)
shape = SubResource("RectangleShape2D_csqgw")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 6
material = SubResource("ShaderMaterial_dt0fg")
offset_left = -3.0
offset_right = 1386.0
offset_bottom = 783.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_ocf3k")
}

[connection signal="body_entered" from="Ball" to="Ball" method="_on_body_entered"]
[connection signal="body_entered" from="GoalLeft/GoalArea" to="." method="_on_goal_left_body_entered"]
[connection signal="body_exited" from="GoalLeft/GoalArea" to="." method="_on_goal_area_body_exited"]
[connection signal="body_entered" from="GoalRight/GoalArea" to="." method="_on_goal_right_body_entered"]
[connection signal="body_exited" from="GoalRight/GoalArea" to="." method="_on_goal_area_body_exited"]
[connection signal="body_entered" from="OverGoal" to="." method="_on_over_goal_body_entered"]
